--- a/assets/style.css
+++ b/assets/style.css
@@ -33,6 +33,16 @@ a {
     transition: .3;   
 }
 
+.foto {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-image: url('images/Flaco.webp');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 a:hover {
     color: #000000;
 }
